# dynamixel-ros-node

./: .gitignore  CMakeLists.txt  LICENSE  README.md  USAGE.md  package.xml  requirements.txt  setup.py
config/: motor_config.yaml  motor_limits.yaml
dynamixel_sdk_custom_interfaces/: CMakeLists.txt
dynamixel_sdk_custom_interfaces/srv/: GetVelocity.srv
dynamixel_sdk_examples/: CMakeLists.txt
dynamixel_sdk_examples/src/: read_write_node.py
install/: local_setup.sh  setup.sh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
launch/: dynamixel_controller.launch  multi_motor.launch
log/: latest_build
scripts/: dynamixel_controller.py  motor_interface.py  simple_motor_test.py
src/: __init__.py  dynamixel_utils.py
(+73 files in other folders)
