<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_ros_node</name>
  <version>1.0.0</version>
  <description>ROS node for controlling Dynamixel motors</description>

  <maintainer email="tobiadetula@example.com">Tobia Detula</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-dynamixel-sdk</exec_depend>

  <export>
  </export>
</package>
